first successfull build on ros1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,5 +69,8 @@
         "variant": "cpp",
         "bit": "cpp"
     },
-    "ros.distro": "noetic"
+    "ros.distro": "noetic",
+    "python.autoComplete.extraPaths": [
+        "/opt/ros/noetic/lib/python3/dist-packages"
+    ]
 }
