--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,7 +67,10 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "bit": "cpp"
+        "bit": "cpp",
+        "hash_map": "cpp",
+        "hash_set": "cpp",
+        "csignal": "cpp"
     },
     "ros.distro": "noetic",
     "python.autoComplete.extraPaths": [
